<resources>
    <string name="app_name">StudMed</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    
    <string name="tipoDocente">Docente</string>
    <string name="tipoEstudiante">Estudiante</string>

    <!--Navigation Drawer Docente-->
    <string name="op_inicio_d">Inicio</string>
    <string name="op_control_asistencia_d">Control de Asistencia</string>
    <string name="op_secciones_d">Secciones</string>
    <string name="op_evaluaciones_d">Evaluaciones</string>
    <string name="op_notificaciones_d">Notificaciones</string>
    <string name="op_cerrar_sesion_d">Cerrar Sesion</string>

    <!--Navigation Drawer Estudiante-->
    <string name="op_inicio_e">Inicio</string>
    <string name="op_control_asistencia_e">Control de Asistencia</string>
    <string name="op_evaluaciones_e">Evaluaciones</string>
    <string name="op_notificaciones_e">Notificaciones</string>
    <string name="op_cerrar_sesion_e">Cerrar Sesion</string>

    <!--Bottom Navigation Bar Docente-->
    <string name="op_support_d">Support</string>
    <string name="op_settings_d">Settings</string>
    <string name="op_perfil_d">Perfil</string>

    <!--Bottom Navigation Bar Estudiante-->
    <string name="op_support_e">Support</string>
    <string name="op_settings_e">Settings</string>
    <string name="op_perfil_e">Perfil</string>


    <string name="txt_bienvenido">Bienvenido</string>


    <!--Registro de docente-->
    <string name="txtRegistroD">Registro de Docente</string>
    <string name="etNombresD">Nombres completos</string>
    <string name="etEmailD">Email</string>
    <string name="etPasswordD">Password</string>
    <string name="etCPasswordD">Confirmar Password</string>
    <string name="btnRegistrarD">Registrarme</string>

    <!--Registro de estudiante-->
    <string name="txtRegistroE">Registro de Estudiante</string>
    <string name="etNombresE">Nombres completos</string>
    <string name="etEmailE">Email</string>
    <string name="etPasswordE">Password</string>
    <string name="etCPasswordE">Confirmar Password</string>
    <string name="btnRegistrarE">Registrarme</string>

    <!--Login de docente-->
    <string name="txtLoginD">Login de Docente</string>
    <string name="btnLogin">Ingresar</string>
    <string name="txtNoCuenta">¿No tienes una cuenta?</string>
    <string name="tvRegistrarD">Registrarme</string>

    <!--Login de estudiante-->
    <string name="txtLoginE">Login de Estudiante</string>
    <string name="btnLoginE">Ingresar</string>
    <string name="txtNoCuentaE">¿No tienes una cuenta?</string>
    <string name="tvRegistrarE">Registrarme</string>

    <!--Secciones-->
    <string name="etSeccionD">Ingrese la Sección</string>
    <string name="btnAgregarSeccion">Agregar Sección</string>


    <!--Agregar Evaluaciones-->
    <string name="txtAgregarEvaluaciones">Agregar Evaluaciones</string>
    <string name="etTituloEva">Nombre de la evaluación</string>
    <string name="etDescripcionEva">Descripción</string>
    <string name="etFechavaEva">Fecha</string>

    <string name="Seccion">Sección</string>

    <string name="etSeccionEva">Sección</string>
    <string name="etCodigoEva">Codigo</string>

    <string name="btnAgregarEvaluacion">Agregar Evaluación</string>


    <!--Secciones-->

    <string name="item_nombre_seccion_d">Nombre de Sección</string>

    <string name="item_nombre_evaluacion_e">Titulo</string>

    <string name="item_seccion_evaluacion_e">Seccion</string>

    <string name="item_descripcion_evaluacion_e">Descripción</string>


    <string name="item_nombre_evaluacion_d">Titulo</string>

    <string name="item_seccion_evaluacion_d">Seccion</string>

    <string name="item_descripcion_evaluacion_d">Descripción</string>






    <!-- Asistencia Estudiante -->
    <string name="hospital_nombre">Hospital Rebagliati</string>
    <string name="fecha_ejemplo_1">Fecha: 02/07/2025</string>
    <string name="hora_ejemplo_1">Hora: 08:00 AM</string>
    <string name="fecha_ejemplo_2">Fecha: 02/07/2025</string>
    <string name="hora_ejemplo_2">Hora: 02:00 PM</string>
    <string name="estado_pendiente">Estado: Pendiente de atención</string>
    <string name="btn_firmar_asistencia">Firmar asistencia con código y geolocalización</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>